# blog

./: .gitignore  CNAME  _config.py  do3ccblog.lektorproject  feed.xml  index.html  index.html.mako  pyproject.toml  recent.js.mako  requirements.in  requirements.txt  site.html  site.html.mako  style.css.mako
.github/: dependabot.yml
.github/workflows/: build_files_as_test.yml  build_files_as_test_javascript.yml  build_files_as_test_python.yml  codeql.yml
_controllers/blog/: __init__.py
_posts/: 001-amazon.markdown  002-dorkbot.markdown  003-delicious-pypi.markdown  004-import_errors.markdown  005-pdbpp.markdown  006-how-to-add-packages-to-buildout.markdown  007-gs-watchdog.markdown  008-pyramid-formalchemy-crudsprint2011-1.markdown  011-europython.markdown  012-plone_with_pip.html.markdown  013-patchparty.markdown  014-debugging_broken_relations.markdown
_posts_unpublished/: 009-europython.markdown  014-pdb.markdown
_templates/: chronological.mako  footer.mako  head.mako  nav.mako  permapage.mako  post.mako  post_excerpt.mako  rss.mako  sidebar.mako  site.mako
_templates/blog/: permapage.mako
about/: index.html
blog/: .__trans99iGPZ  .__transH2ctSF  index.html
camisinha/: camisinha_social.js
configs/: atom.ini
content/: contents.lr
css/: presentation.css
models/: blog-post.ini  blog.ini
preseed/: default.txt
presentations/: index.html  index.html.mako
projects/: index.html
static/: style.css
templates/: blog-post.html  blog.html  layout.html  presentations.html
webpack/: package-lock.json  package.json  webpack.config.js
(+51 files in other folders)
