[project]
name = "do3ccblog"
version = "0.1.0"
description = "Patrick's personal blog built with Lektor - texts and presentations about Python, web development, and tech"
requires-python = ">=3.11"
dependencies = [
    "lektor>=3.3.11",
    "lektor-markdown-highlighter>=0.3.2",
    "lektor-atom>=0.4",
    "lektor-webpack-support>=0.6",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog"]
